--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=ture
 spring.jpa.properties.hibernate.format_sql=true
+server.port=9090
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 logging.level.org.springframework.web=DEBUG
